# Amy-LM

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  STATE.md  WORKFLOW.md  analyze_loss.py  audit_training.py  check_llm_dim.py  check_token_stats.py  hello.py  pyproject.toml  train.py
.agents/skills/: diagnose  improve-codebase-architecture  setup-matt-pocock-skills  skills-lock.json  tdd  to-issues  to-prd  triage  zoom-out
.agents/skills/diagnose/: SKILL.md
.agents/skills/grill-with-docs/: SKILL.md
.agents/skills/improve-codebase-architecture/: SKILL.md
.agents/skills/setup-project-skills/: SKILL.md
.agents/skills/skills/: setup-project-skills
.agents/skills/subagent-driven-development/: SKILL.md
.agents/skills/tdd/: SKILL.md
.agents/skills/to-issues/: SKILL.md
.agents/skills/to-prd/: SKILL.md
.agents/skills/triage/: SKILL.md
.agents/skills/writing-plans/: SKILL.md  plan-document-reviewer-prompt.md
.agents/skills/zoom-out/: SKILL.md
.github/ISSUE_TEMPLATE/: custom.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-data-pipeline/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-SUMMARY.md  01-04-SUMMARY.md  01-05-SUMMARY.md  01-UAT.md
benchmark/prosody_validation/: README.md  config.yaml  fix-step4-llm-failed.py  merged_dataset.csv  pyproject.toml  quick_fix_step2_audio_manifest_missing.py  rerun-step4-llm.py  run_pipeline.py
benchmark/prosody_validation/outputs/: combined_results.csv
benchmark/prosody_validation/outputs/evaluations/: evaluation_summary.json  step6_asr_evaluations.jsonl  step6_e2e_evaluations.jsonl  step6_text_evaluations.jsonl
benchmark/prosody_validation/outputs/responses/: step3_text_responses.jsonl  step4_asr_responses.jsonl  step5_e2e_responses.jsonl
benchmark/prosody_validation/src/: __init__.py  config.py  openrouter_client.py  qwen3_tts_wrapper.py  utils.py  whisper_wrapper.py
benchmark/prosody_validation/steps/: __init__.py  step0_merge_sample.py  step1_rewrite_text.py  step2_generate_speech.py  step3_text_baseline.py  step4_asr_pipeline.py  step5_e2e_audio.py  step6_evaluate_responses.py  step7_combine_results.py
docs/: evaluation.md  loss_cheatsheet.md  prosody_timbre_benchmarking_research.md
docs/agents/: domain.md  issue-tracker.md
docs/detailed/dataset/: extraction.md
docs/experiment-changelogs/: 2026-04-06-training-audit-wavlm-stuck.md  2026-04-06-wavlm-centered-improved.md  2026-04-07-wavlm-centered-mlp-STOPPED.md  2026-04-07-wavlm-centered-mlp-both-sided.md
docs/ideation/: amy.md  data-prep.md  proposal.md
docs/planning/: 2026-04-07-isolation-alpha-llm-zero.md  2026-04-07-isolation-semantic-detach.md
docs/plans/2026-05-04-mustard-preprocessing/: OLD-full-plan.md  README.md  decisions.md  phase-01-preprocessing.md  strategy.md  (+2 more)
docs/research/: naturalspeech3_review.md
docs/spikes/: issue-12-facodec-stream-contract.md
docs/training_records/: 20_12_25_14_40.md
notebooks/: data_explore.ipynb  inference.ipynb  mimi_frenkeinstein.ipynb
scripts/: fix_audio_column.py  inspect_facodec_contract.py  prepare_mustard_dataset.py  preprocess.py  train_alpha_llm_zero.py  train_semantic_detach.py  train_wavlm_centered_mlp.py
src/amy_lm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/data/: 1_extract_alignment.py  2_extract_wavlm.py  3_extract_llm.py  push_to_hub.py
src/models/: __init__.py  embedding.py  fusion.py  pooling.py
src/preprocessing/: __init__.py  dataset_processor.py  facodec_encoder.py  reporting.py
src/proactive_sat/: __init__.py
src/trainer/: adversarial_losses.py  compressor_data_loader.py  compressor_trainer.py  evaluation.py  mstftd.py  specloss.py
tests/models/: test_embedding.py  test_fusion.py  test_pooling.py
tests/preprocessing/: test_dataset_processor.py  test_facodec_encoder.py  test_integration.py  test_reporting.py
(+32 files in other folders)
