[project]
name = "amy-lm"
version = "0.1.0"
description = "Amy LM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.15.0",
    "numpy>=1.24.0",
    "soundfile>=0.13.1",
    "torch>=2.0.0",
    "torchaudio>=2.9.1",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
# Machine A: Alignment (System deps: ffmpeg, libsndfile1)
alignment = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "soundfile>=0.12.0",
    "accelerate>=0.20.0",
    "nemo_toolkit[asr]"
]
wavlm = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
]
llm = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "accelerate",
    "sentencepiece",
    "protobuf",
]
upload = [
    "huggingface_hub>=0.20.0",
]
preprocessing = [
    "datasets>=2.15.0",
    "huggingface-hub>=0.20.0",
    "soundfile>=0.13.1",
    "torchaudio>=2.9.1",
    "tqdm>=4.66.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
